implemented Lenet 1 and Lenet 4

--- a/Comparison_with_Other_Classifiers.ipynb
+++ b/Comparison_with_Other_Classifiers.ipynb
@@ -24,12 +24,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "dMjLix5Tg_Rj",
-        "outputId": "e7e87378-717e-4a5c-af18-47f40cacb62b"
+        "outputId": "093c1889-4d30-4f37-82b4-863a2dabc731"
       },
       "source": [
         "!pip install python-mnist"
       ],
-      "execution_count": 105,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -53,7 +53,7 @@
         "from keras.models import Sequential\n",
         "from keras.layers import Dense, Conv2D, Flatten, AveragePooling2D"
       ],
-      "execution_count": 122,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -70,7 +70,7 @@
         "  corr /= len(y_true)\n",
         "  return corr*100"
       ],
-      "execution_count": 107,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -88,7 +88,7 @@
         "X_train = np.array(X_train)\n",
         "X_test = np.array(X_test)"
       ],
-      "execution_count": 108,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -104,7 +104,7 @@
         "for i in y_test:\n",
         "    y_test_nn[i] = 1"
       ],
-      "execution_count": 109,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -119,7 +119,7 @@
         "    model = model.fit(X_train, y_train)\n",
         "    return [Accuracy(model.predict(X_test), y_test)]"
       ],
-      "execution_count": 110,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -136,7 +136,7 @@
         "    model = model.fit(X_train, y_train)\n",
         "    return [Accuracy(model.predict(X_test), y_test)]"
       ],
-      "execution_count": 111,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -159,7 +159,7 @@
         "    model = model.fit(X_train_updated, y_train)\n",
         "    return [Accuracy(model.predict(X_test_updated), y_test)]"
       ],
-      "execution_count": 112,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -189,7 +189,7 @@
         "\n",
         "    return ret"
       ],
-      "execution_count": 113,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -218,10 +218,20 @@
         "    model_1000.compile(loss='categorical_crossentropy', optimizer='adam', metrics=['accuracy'])\n",
         "    history = model_1000.fit(X_train, y_train_nn,validation_data = (X_test,y_test_nn), epochs=100, batch_size=64)\n",
         "    ret[\"28*28-1000-150-10\"] =  max(history.history['val_accuracy'])*100\n",
-        "\n",
         "    return ret"
       ],
-      "execution_count": 114,
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "qAW00kKMvDzo"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 29,
       "outputs": []
     },
     {
@@ -231,7 +241,8 @@
       },
       "source": [
         "models = [\"Linear_Classifier_and_Pairwise_Linear_Classifier\", \"Baseline_Nearest_Neighbor_Classifer\", \n",
-        "          \"Principal_Component_Analysis_and_Polynomial_Classifier\", \"OneHidden_Layer_Neural_Network\", \"TwoHidden_Layer_Neural_Network\"]\n",
+        "          \"Principal_Component_Analysis_and_Polynomial_Classifier\", \"OneHidden_Layer_Neural_Network\",\n",
+        "          \"TwoHidden_Layer_Neural_Network\", \"Lenet_1\"]\n",
         "names, acc = [], []\n",
         "for i in models:\n",
         "    temp = eval(i+\"()\")\n",
@@ -255,7 +266,22 @@
         "id": "YGt-sR5edT1x"
       },
       "source": [
-        "df"
+        "def Lenet_1():\n",
+        "    # model\n",
+        "    model = Sequential()\n",
+        "    model.add(Conv2D(4, kernel_size=5, activation=\"tanh\", input_shape=(28,28,1)))\n",
+        "    model.add(AveragePooling2D(pool_size=(2, 2), strides=(2, 2), padding='valid'))\n",
+        "    model.add(Conv2D(12, kernel_size=5, activation=\"tanh\"))\n",
+        "    model.add(AveragePooling2D(pool_size=(2, 2), strides=(2, 2), padding='valid'))\n",
+        "    model.add(Flatten())\n",
+        "    model.add(Dense(10, activation=\"sigmoid\"))\n",
+        "    # model.summary()\n",
+        "\n",
+        "    # Compile, train and find accuracy\n",
+        "    model.compile(optimizer='adam', loss='categorical_crossentropy', metrics=['accuracy'])\n",
+        "    history = model.fit(X_train.reshape(len(X_train), 28, 28, 1), y_train_nn,\n",
+        "                        validation_data = (X_test.reshape(len(X_test), 28, 28, 1),y_test_nn), epochs=3, batch_size=64)\n",
+        "    return [max(history.history['val_accuracy'])*100]"
       ],
       "execution_count": null,
       "outputs": []
@@ -266,17 +292,31 @@
         "id": "0PGrYN4MoD9j"
       },
       "source": [
-        "def Lenet_1():\n",
+        "def Lenet_4():\n",
+        "    # Pad the data to get 32*32 input dimensions\n",
+        "    X_train_pad = X_train.reshape(len(X_train), 28, 28)\n",
+        "    X_test_pad = X_test.reshape(len(X_test), 28, 28)\n",
+        "    X_train_pad = np.array([np.pad(i, (2)) for i in X_train_pad])\n",
+        "    X_test_pad = np.array([np.pad(i, (2)) for i in X_test_pad])\n",
+        "\n",
+        "    # model\n",
         "    model = Sequential()\n",
-        "    model.add(Conv2D(4, kernel_size=5, activation=\"tanh\", input_shape=(28,28,1)))\n",
-        "    model.add(AveragePooling2D(pool_size=(2, 2), strides=(1, 1), padding='valid'))\n",
-        "    model.add(Conv2D(12, kernel_size=5, activation=\"tanh\"))\n",
-        "    model.add(AveragePooling2D(pool_size=(2, 2), strides=(1, 1), padding='valid'))\n",
+        "    model.add(Conv2D(4, kernel_size=5, activation=\"tanh\", input_shape=(32,32,1)))\n",
+        "    model.add(AveragePooling2D(pool_size=(2, 2), strides=(2, 2), padding='valid'))\n",
+        "    model.add(Conv2D(16, kernel_size=5, activation=\"tanh\"))\n",
+        "    model.add(AveragePooling2D(pool_size=(2, 2), strides=(2, 2), padding='valid'))\n",
         "    model.add(Flatten())\n",
+        "    model.add(Dense(120, activation=\"tanh\"))\n",
         "    model.add(Dense(10, activation=\"sigmoid\"))\n",
-        "    model.summary()"
+        "    # model.summary()\n",
+        "\n",
+        "    # Compile, train and find accuracy\n",
+        "    model.compile(optimizer='adam', loss='categorical_crossentropy', metrics=['accuracy'])\n",
+        "    history = model.fit(X_train_pad, y_train_nn,\n",
+        "                        validation_data = (X_test_pad,y_test_nn), epochs=3, batch_size=64)\n",
+        "    return [max(history.history['val_accuracy'])*100]"
       ],
-      "execution_count": 123,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -285,49 +325,42 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "S4ZYeQ4nr6hD",
-        "outputId": "2cae787a-09c2-4392-90f5-755e597149cf"
+        "id": "OYwIm79Kw5qm",
+        "outputId": "0cffe724-475c-48a5-dbed-db39778c6674"
       },
       "source": [
-        "Lenet_1()"
+        "Lenet_4()"
       ],
-      "execution_count": 124,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Model: \"sequential_15\"\n",
-            "_________________________________________________________________\n",
-            " Layer (type)                Output Shape              Param #   \n",
-            "=================================================================\n",
-            " conv2d_1 (Conv2D)           (None, 24, 24, 4)         104       \n",
-            "                                                                 \n",
-            " average_pooling2d (AverageP  (None, 23, 23, 4)        0         \n",
-            " ooling2D)                                                       \n",
-            "                                                                 \n",
-            " conv2d_2 (Conv2D)           (None, 19, 19, 12)        1212      \n",
-            "                                                                 \n",
-            " average_pooling2d_1 (Averag  (None, 18, 18, 12)       0         \n",
-            " ePooling2D)                                                     \n",
-            "                                                                 \n",
-            " flatten (Flatten)           (None, 3888)              0         \n",
-            "                                                                 \n",
-            " dense_28 (Dense)            (None, 10)                38890     \n",
-            "                                                                 \n",
-            "=================================================================\n",
-            "Total params: 40,206\n",
-            "Trainable params: 40,206\n",
-            "Non-trainable params: 0\n",
-            "_________________________________________________________________\n"
+            "Epoch 1/3\n",
+            "157/157 [==============================] - 18s 112ms/step - loss: 0.0239 - accuracy: 0.0011 - val_loss: 0.0040 - val_accuracy: 0.0000e+00\n",
+            "Epoch 2/3\n",
+            "157/157 [==============================] - 17s 111ms/step - loss: 0.0239 - accuracy: 0.0000e+00 - val_loss: 0.0040 - val_accuracy: 0.0000e+00\n",
+            "Epoch 3/3\n",
+            "157/157 [==============================] - 17s 112ms/step - loss: 0.0239 - accuracy: 0.0000e+00 - val_loss: 0.0040 - val_accuracy: 0.0000e+00\n"
           ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[0.0]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 17
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Pn6650lUr7sO"
+        "id": "t-GR9_kIysV_"
       },
       "source": [
         ""
