added model saving and corrected initializations

--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 96,
    "id": "listed-diana",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 97,
    "id": "successful-treasurer",
    "metadata": {},
    "outputs": [],
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 98,
    "id": "correct-benefit",
    "metadata": {},
    "outputs": [],
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 99,
    "id": "attempted-utility",
    "metadata": {},
    "outputs": [],
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 100,
    "id": "finished-omega",
    "metadata": {},
    "outputs": [],
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 101,
    "id": "defensive-grenada",
    "metadata": {},
    "outputs": [],
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 102,
    "id": "cef19200",
    "metadata": {},
    "outputs": [],
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 103,
    "id": "developing-fraud",
    "metadata": {},
    "outputs": [],
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 104,
    "id": "heated-albany",
    "metadata": {},
    "outputs": [],
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 105,
    "id": "active-reggae",
    "metadata": {},
    "outputs": [],
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 106,
    "id": "personalized-screw",
    "metadata": {},
    "outputs": [],
@@ -177,14 +177,14 @@
     "        14: [0, 2, 3, 5], \n",
     "        15: [0, 1, 2, 3, 4, 5]}\n",
     "A = 1.7159\n",
-    "S = 2 / 3\n",
+    "S = 2 / 3       \n",
     "\n",
-    "conv = [(np.random.rand(6, 5, 5)), (np.random.rand(6, 16, 5, 5)), (np.random.rand(16, 120, 5, 5))]\n",
-    "bConv = [(np.random.rand(6)), (np.random.rand(16)), (np.random.rand(120))]\n",
-    "w1 = np.random.rand(120, 84)\n",
-    "b1 = np.random.rand(84)\n",
-    "w2 = np.random.rand(84, 10)\n",
-    "b2 = np.random.rand(10)\n",
+    "conv = [((np.random.rand(6, 5, 5))-0.5)*4.8, (((np.random.rand(6, 16, 5, 5))-0.5)*4.8)/6, (((np.random.rand(16, 120, 5, 5))-0.5)*4.8)/16]\n",
+    "bConv = [((np.random.rand(6))-0.5)*4.8, (((np.random.rand(16))-0.5)*4.8)/6, (((np.random.rand(120))-0.5)*4.8)/16]\n",
+    "w1 = ((np.random.rand(120, 84)-0.5)*4.8)/120\n",
+    "b1 = ((np.random.rand(84)-0.5)*4.8)/120\n",
+    "w2 = ((np.random.rand(84, 10)-0.5)*4.8)/84\n",
+    "b2 = ((np.random.rand(10)-0.5)*4.8)/84\n",
     "\n",
     "ret1 = []\n",
     "ret2 = []\n",
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 107,
    "id": "abroad-pontiac",
    "metadata": {},
    "outputs": [],
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": 108,
    "id": "offensive-midnight",
    "metadata": {},
    "outputs": [],
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 109,
    "id": "circular-illness",
    "metadata": {},
    "outputs": [],
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 110,
    "id": "sound-davis",
    "metadata": {},
    "outputs": [
@@ -359,15 +359,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 13%|█▎        | 134/1000 [02:51<19:12,  1.33s/it]"
+      "  1%|          | 88/10000 [01:20<2:31:01,  1.09it/s]"
      ]
     }
    ],
    "source": [
-    "final = [[] for _ in range(len(xTrain[:1000]))]\n",
-    "for i in tqdm(range(len(xTrain[:1000]))):\n",
+    "for i in tqdm(range(len(xTrain[:10000]))):\n",
     "    alpha = 0.01\n",
-    "    final[i] = forward(xTrain[i])\n",
+    "    forward(xTrain[i])\n",
     "    expected = np.zeros((10))\n",
     "    expected[yTrain[i]] = 1\n",
     "    dW, db, delta = backFlatLast(w2, b2, ret4, ret5, expected)\n",
@@ -411,12 +410,12 @@
     "\n",
     "    return corr * 100\n",
     "\n",
-    "y_pred = np.zeros((len(xTest[:1000])))\n",
-    "for i in tqdm(range(len(xTest[:1000]))):\n",
+    "y_pred = np.zeros((len(xTest)))\n",
+    "for i in tqdm(range(len(xTest))):\n",
     "    m = forward(xTest[i])\n",
     "    y_pred[i] = list(m).index(max(m))\n",
     "\n",
-    "Accuracy(yTest[:1000], y_pred)"
+    "Accuracy(yTest, y_pred)"
    ]
   },
   {
@@ -424,8 +423,43 @@
    "execution_count": null,
    "id": "classical-gardening",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_keys(['S2C3', 'A', 'S', 'ret1', 'ret2', 'ret3', 'ret4', 'ret5', 'conv', 'bConv', 'w1', 'b1', 'w2', 'b2'])\n"
+     ]
+    }
+   ],
+   "source": [
+    "import json\n",
+    "\n",
+    "def make_list(nparr):\n",
+    "    for i in range(len(nparr)):\n",
+    "        nparr[i] = nparr[i].tolist()\n",
+    "    return nparr\n",
+    "\n",
+    "to_dump = {}\n",
+    "to_dump['S2C3'] = S2C3\n",
+    "to_dump['A'] = A\n",
+    "to_dump['S'] = S\n",
+    "to_dump['ret1'] = np.array(ret1).tolist()\n",
+    "to_dump['ret2'] = np.array(ret2).tolist()\n",
+    "to_dump['ret3'] = np.array(ret3).tolist()\n",
+    "to_dump['ret4'] = np.array(ret4).tolist()\n",
+    "to_dump['ret5'] = np.array(ret5).tolist()\n",
+    "to_dump['conv'] = make_list(conv)\n",
+    "to_dump['bConv'] = make_list(bConv)\n",
+    "to_dump['w1'] = np.array(w1).tolist()\n",
+    "to_dump['b1'] = np.array(b1).tolist()\n",
+    "to_dump['w2'] = np.array(w2).tolist()\n",
+    "to_dump['b2'] = np.array(b2).tolist()\n",
+    "\n",
+    "print(to_dump.keys())\n",
+    "with open(\"./model_parameters.json\",\"w\") as f:\n",
+    "    json.dump(to_dump,f)"
+   ]
   }
  ],
  "metadata": {
@@ -444,7 +478,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
